adde doverflow hidden to inlay areas to prevent overflow if link is too long

--- a/app/styles/_modal.styl
+++ b/app/styles/_modal.styl
@@ -133,6 +133,7 @@
     border-top-color hsl(0, 0%, 65%)
     border-radius 5px
     box-shadow 0 1px rgba(0,0,0,.13) inset, 0 2px rgba(0,0,0,.05) inset
+    overflow hidden
   
   .controls
     background linear-gradient(top, hsl(205,8%,75%), hsl(205,3%,50%))
